--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8f752db",
    "metadata": {},
    "source": [
     "## 1) Telegram-bot \n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff05ce31",
    "metadata": {},
    "source": [
     "## 2) Yandex api"
@@ -20,8 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "803cd4b7",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +29,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "22b598b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67a1423d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cf3143f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +59,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c5dafc3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +68,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "be37820c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "54a607f6",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +97,63 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75bd0405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curl -X POST \\\n",
+    "   -H \"Authorization: Bearer ${IAM_TOKEN}\" \\\n",
+    "   --data-binary \"@speech.ogg\" \\\n",
+    "   \"https://stt.api.cloud.yandex.net/speech/v1/stt:recognize?folderId=${FOLDER_ID}&lang=ru-RU\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IAM_TOKEN = 't1.9euelZqPnYmXx8mSzc2Sy5yWi5bLyO3rnpWamp6Tj5zMypHHzJGSxpCby8rl9PcXU39s-e9zKC2C3fT3VwF9bPnvcygtgg.3vW6t4osf5ob0K0kvjXTPCiNzL_SkyZS95vVwSxnk5TnFJv5OTvPptdWP_1Qdcqj7crESVkUIGsJ-y-sMUXJDA'\n",
+    "FOLDER_ID = 'b1gtbkakskb978s7geb5'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {IAM_TOKEN}\"\n",
+    "}\n",
+    "with open('../new_file.ogg', 'rb') as f:\n",
+    "    resp = requests.post(f\"https://stt.api.cloud.yandex.net/speech/v1/stt:recognize?folderId={FOLDER_ID}&lang=ru-RU\",\n",
+    "                 data=f.read(),\n",
+    "                        headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'result': 'Раз раз проверка'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(resp.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -114,7 +161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -128,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
