--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d283e768",
    "metadata": {},
    "source": [
     "## 1) Telegram-bot \n",
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e7e4870",
    "metadata": {},
    "source": [
     "## 2) Yandex api"
@@ -19,6 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "a6660de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a4299908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "801ff7d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "16c7ad6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "d42e5e38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "569bee1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "125b9783",
    "metadata": {},
    "outputs": [
     {
@@ -97,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9f78a263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,6 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "71bfc231",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "id": "913a5132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,27 +145,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "id": "eb2dc056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = json.loads(resp.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cb11fa99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'result': 'Раз раз проверка'}"
+       "{'result': 'Але але привет'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json.loads(resp.content)"
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0594c30e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Але але привет'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res['result']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fe58502c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -161,7 +206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
