--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "a6660de3",
    "metadata": {},
    "outputs": [],
@@ -118,18 +118,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "71bfc231",
    "metadata": {},
    "outputs": [],
    "source": [
-    "IAM_TOKEN = 't1.9euelZqPnYmXx8mSzc2Sy5yWi5bLyO3rnpWamp6Tj5zMypHHzJGSxpCby8rl9PcXU39s-e9zKC2C3fT3VwF9bPnvcygtgg.3vW6t4osf5ob0K0kvjXTPCiNzL_SkyZS95vVwSxnk5TnFJv5OTvPptdWP_1Qdcqj7crESVkUIGsJ-y-sMUXJDA'\n",
-    "FOLDER_ID = 'b1gtbkakskb978s7geb5'"
+    "IAM_TOKEN = 't1.9euelZrNmp6TyY2Wns6RlJKKjJuej-3rnpWaz5jLl5COjcfOkZOSlZePj8jl8_cfU15s-e9gAAVj_N3z918BXGz572AABWP8.N7T9WobKdumm2-4SNJyMZRizhbAlqs8hAiLuFDsk2EB4QORRAF9U56mSWcPB0FVoXFkbNdiMgvPtAF8kwW-xCw'\n",
+    "FOLDER_ID = 'b1gt07nk76c43kjffpvb'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "913a5132",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "eb2dc056",
    "metadata": {},
    "outputs": [],
@@ -155,17 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "cb11fa99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'result': 'Але але привет'}"
+       "{'error_code': 'UNAUTHORIZED',\n",
+       " 'error_message': 'rpc error: code = PermissionDenied desc = Permission denied'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,19 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0594c30e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Але але привет'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'result'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/jb/408yjnl12jn4prjkwprbbs5c0000gn/T/ipykernel_14724/2672541293.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'result'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'result'"
+     ]
     }
    ],
    "source": [
@@ -197,8 +199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fe58502c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/jb/408yjnl12jn4prjkwprbbs5c0000gn/T/ipykernel_67576/1158820258.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'res' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30bf55f1",
    "metadata": {},
    "outputs": [],
    "source": []
